--- a/index.html
+++ b/index.html
@@ -41,9 +41,21 @@
             <div>
               <ul class="contact-links">
                 <li>
-                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                  <a href="mailto:info@devstudio.com"
+                    ><svg class="contact-link-icon" width="16" height="12">
+                      <use href="./images/icons.svg#envelope"></use>
+                    </svg>
+                    info@devstudio.com</a
+                  >
                 </li>
-                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+                <li>
+                  <a href="tel:+48111111111"
+                    ><svg class="contact-link-icon" width="10" height="16">
+                      <use href="./images/icons.svg#phone"></use>
+                    </svg>
+                    +48 111 111 111</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
