--- a/index.html
+++ b/index.html
@@ -41,20 +41,24 @@
             <div>
               <ul class="contact-links">
                 <li>
-                  <a href="mailto:info@devstudio.com"
-                    ><svg class="contact-link-icon" width="16" height="12">
-                      <use href="./images/icons.svg#envelope"></use>
-                    </svg>
-                    info@devstudio.com</a
-                  >
+                  <div class="link-with-icon">
+                    <a href="mailto:info@devstudio.com"
+                      ><svg class="contact-link-icon" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                      </svg>
+                      info@devstudio.com</a
+                    >
+                  </div>
                 </li>
                 <li>
-                  <a href="tel:+48111111111"
-                    ><svg class="contact-link-icon" width="10" height="16">
-                      <use href="./images/icons.svg#phone"></use>
-                    </svg>
-                    +48 111 111 111</a
-                  >
+                  <div class="link-with-icon">
+                    <a href="tel:+48111111111"
+                      ><svg class="contact-link-icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-phone"></use>
+                      </svg>
+                      +48 111 111 111</a
+                    >
+                  </div>
                 </li>
               </ul>
             </div>
@@ -74,6 +78,11 @@
         <div class="container">
           <ul class="skills">
             <li>
+              <div class="skills-icon">
+                <svg width="70" height="70">
+                  <use href="images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="skill-name">LOREM IPSUM</h3>
               <span class="skill-description"
                 >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -81,6 +90,11 @@
               >
             </li>
             <li>
+              <div class="skills-icon">
+                <svg width="70" height="70">
+                  <use href="images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="skill-name">LOREM IPSUM</h3>
               <span class="skill-description"
                 >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -88,6 +102,11 @@
               >
             </li>
             <li>
+              <div class="skills-icon">
+                <svg width="70" height="70">
+                  <use href="images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="skill-name">LOREM IPSUM</h3>
               <span class="skill-description"
                 >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -95,6 +114,11 @@
               >
             </li>
             <li>
+              <div class="skills-icon">
+                <svg width="70" height="70">
+                  <use href="images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="skill-name">LOREM IPSUM</h3>
               <span class="skill-description"
                 >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -152,6 +176,36 @@
                 <figcaption>
                   <p class="member-name">John Doe</p>
                   <p class="member-job">Product Designer</p>
+                  <ul class="team-media">
+                    <li>
+                      <a href="#" class="team-media-button">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin2"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -166,6 +220,36 @@
                 <figcaption>
                   <p class="member-name">John Doe</p>
                   <p class="member-job">Frontend Developer</p>
+                  <ul class="team-media">
+                    <li>
+                      <a href="#" class="team-media-button">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin2"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -180,6 +264,36 @@
                 <figcaption>
                   <p class="member-name">John Doe</p>
                   <p class="member-job">Marketing</p>
+                  <ul class="team-media">
+                    <li>
+                      <a href="#" class="team-media-button">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin2"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -194,8 +308,76 @@
                 <figcaption>
                   <p class="member-name">John Doe</p>
                   <p class="member-job">UI Designer</p>
+                  <ul class="team-media">
+                    <li>
+                      <a href="#" class="team-media-button">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg class="team-media-icon" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin2"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="clients section">
+        <div class="container">
+          <h2 class="section-title">Nasi klienci</h2>
+          <ul class="client-list">
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo1"></use>
+              </svg>
+            </li>
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo2"></use>
+              </svg>
+            </li>
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo3"></use>
+              </svg>
+            </li>
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo4"></use>
+              </svg>
+            </li>
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo5"></use>
+              </svg>
+            </li>
+            <li class="client-list-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -204,23 +386,54 @@
 
     <footer>
       <div class="container">
-        <a href="index.html" class="footer-logo">
-          <span class="logo-primary">Web</span
-          ><span class="logo-tertiary">Studio</span>
-        </a>
-        <address>
-          <ul>
-            <li class="street">m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-mail"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+48111111111" class="footer-tel">+48 111 111 111</a>
-            </li>
-          </ul>
-        </address>
+        <section>
+          <a href="index.html" class="footer-logo">
+            <span class="logo-primary">Web</span
+            ><span class="logo-tertiary">Studio</span>
+          </a>
+          <address>
+            <ul>
+              <li class="street">m. Warszawa, Aleje Jerozolimskie 21</li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+48111111111" class="footer-tel"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </section>
+        <section class="footer-socialmedia">
+          <p class="footer-header">Dołącz do nas</p>
+          <div>
+            <ul class="footer-socialmedia-list">
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
     </footer>
   </body>
