--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <header>
-      <div class="menu-border">
-        <div class="container">
+      <div class="container">
+        <div class="menu-border">
           <div class="menu-container">
             <nav>
               <h2>
@@ -39,9 +39,25 @@
             <div>
               <ul class="contact-links">
                 <li>
-                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                  <div class="link-with-icon">
+                    <a href="mailto:info@devstudio.com"
+                      ><svg class="contact-link-icon" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                      </svg>
+                      info@devstudio.com</a
+                    >
+                  </div>
                 </li>
-                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+                <li>
+                  <div class="link-with-icon">
+                    <a href="tel:+48111111111"
+                      ><svg class="contact-link-icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-phone"></use>
+                      </svg>
+                      +48 111 111 111</a
+                    >
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
@@ -200,23 +216,54 @@
 
     <footer>
       <div class="container">
-        <a href="index.html" class="footer-logo">
-          <span class="logo-primary">Web</span
-          ><span class="logo-tertiary">Studio</span>
-        </a>
-        <address>
-          <ul>
-            <li class="street">m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-mail"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+48111111111" class="footer-tel">+48 111 111 111</a>
-            </li>
-          </ul>
-        </address>
+        <section>
+          <a href="index.html" class="footer-logo">
+            <span class="logo-primary">Web</span
+            ><span class="logo-tertiary">Studio</span>
+          </a>
+          <address>
+            <ul>
+              <li class="street">m. Warszawa, Aleje Jerozolimskie 21</li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+48111111111" class="footer-tel"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </section>
+        <section class="footer-socialmedia">
+          <p class="footer-header">Dołącz do nas</p>
+          <div>
+            <ul class="footer-socialmedia-list">
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="footer-media-item">
+                <svg class="footer-media-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
     </footer>
   </body>
