--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div>
               <ul class="contact-links">
                 <li>
-                  <div class="link-with-icon">
-                    <a href="mailto:info@devstudio.com"
+                  <div>
+                    <a href="mailto:info@devstudio.com" class="link-with-icon"
                       ><svg class="contact-link-icon" width="16" height="12">
                         <use href="./images/icons.svg#icon-envelope"></use>
                       </svg>
@@ -51,8 +51,8 @@
                   </div>
                 </li>
                 <li>
-                  <div class="link-with-icon">
-                    <a href="tel:+48111111111"
+                  <div>
+                    <a href="tel:+48111111111" class="link-with-icon"
                       ><svg class="contact-link-icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-phone"></use>
                       </svg>
@@ -185,21 +185,21 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin2"></use>
                         </svg>
@@ -229,21 +229,21 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin2"></use>
                         </svg>
@@ -273,21 +273,21 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin2"></use>
                         </svg>
@@ -317,21 +317,21 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="#" class="team-media-button">
                         <svg class="team-media-icon" width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin2"></use>
                         </svg>
