--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,8 @@
             <div>
               <ul class="contact-links">
                 <li>
-                  <div class="link-with-icon">
-                    <a href="mailto:info@devstudio.com"
+                  <div>
+                    <a href="mailto:info@devstudio.com" class="link-with-icon"
                       ><svg class="contact-link-icon" width="16" height="12">
                         <use href="./images/icons.svg#icon-envelope"></use>
                       </svg>
@@ -49,8 +49,8 @@
                   </div>
                 </li>
                 <li>
-                  <div class="link-with-icon">
-                    <a href="tel:+48111111111"
+                  <div>
+                    <a href="tel:+48111111111" class="link-with-icon"
                       ><svg class="contact-link-icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-phone"></use>
                       </svg>
@@ -76,8 +76,8 @@
         </ul>
 
         <ul class="item-list">
-          <li>
-            <figure class="item">
+          <li class="item">
+            <figure>
               <img
                 src="./images/img1.jpg"
                 alt="laptop ze stroną internetową"
@@ -91,8 +91,8 @@
             </figure>
           </li>
 
-          <li>
-            <figure class="item">
+          <li class="item">
+            <figure>
               <img
                 src="./images/img2.jpg"
                 alt="dwóch koszykarzy"
@@ -106,8 +106,8 @@
             </figure>
           </li>
 
-          <li>
-            <figure class="item">
+          <li class="item">
+            <figure>
               <img
                 src="./images/img3.jpg"
                 alt="logo Seafood"
